# program-xAriextz

./: PROJECT_DESCRIPTION.md
anchor_project/: README.md
frontend/: README.md
frontend/pay2msg-frontend/: README.md  package-lock.json  package.json
frontend/pay2msg-frontend/anchor/: Anchor.toml  codama.js
frontend/pay2msg-frontend/anchor/programs/pay2msgfrontend/: Cargo.toml
frontend/pay2msg-frontend/anchor/programs/pay2msgfrontend/src/: lib.rs
frontend/pay2msg-frontend/anchor/src/: index.ts  pay2msgfrontend-exports.ts
frontend/pay2msg-frontend/anchor/tests/: pay2msgfrontend.test.ts
frontend/pay2msg-frontend/src/app/: layout.tsx  page.tsx
frontend/pay2msg-frontend/src/app/pay2msgfrontend/: page.tsx
frontend/pay2msg-frontend/src/components/: app-header.tsx
frontend/pay2msg-frontend/src/components/solana/: solana-provider.tsx
frontend/pay2msg-frontend/src/features/pay2msgfrontend/: pay2msgfrontend-feature.tsx
frontend/pay2msg-frontend/src/features/pay2msgfrontend/data-access/: use-get-program-account-query.ts  use-greet-mutation.ts
frontend/pay2msg-frontend/src/features/pay2msgfrontend/ui/: pay2msgfrontend-ui-create.tsx  pay2msgfrontend-ui-program-explorer-link.tsx  pay2msgfrontend-ui-program.tsx
frontend/pay2msg-frontend/src/idl/: pay2msg.json
frontend/pay2msg-frontend/src/lib/: program.ts
